--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ nav ul li a:hover::after {
   justify-content: center;
   text-align: center;
   color: white;
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/hero.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/hero.mp4') center/cover no-repeat;
   margin-bottom: 40px;
 }
 
